# NesesText

./: .gitignore  CMakeCache.txt  CMakeLists.txt  NesesText.sln  README.md  utf8.txt  win1254.txt
NesesText/: BackObject.hpp  CMakeLists.txt  NesesText.cpp  NesesText.h  win1254_table.hpp
